# py_load_pubmedcentral

./: .gitignore  DATASOURCE.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  run_tests_with_coverage.sh
py-load-pubmedcentral/: README.md  pyproject.toml
py-load-pubmedcentral/src/py_load_pubmedcentral/: acquisition.py  cli.py  config.py  db.py  models.py  parser.py  utils.py
py-load-pubmedcentral/tests/: sample_oa_file_list.csv  sample_retractions.csv  test.xml  test_acquisition.py  test_config.py  test_delta_load.py  test_full_load_optimization.py  test_full_pipeline.py  test_parser.py  test_pipeline_integration.py  test_s3_acquisition.py
py-load-pubmedcentral/tests/test_data/: delta_article.xml  oa_file_list.csv  retractions.csv
schemas/: pmc_schema.sql
src/py_load_pubmedcentral/: acquisition.py  cli.py  config.py  db.py  parser.py  utils.py
tests/: conftest.py  sample_oa_file_list.csv  test_acquisition.py  test_cli.py  test_config.py  test_db.py  test_delta_load.py  test_delta_load_robustness.py  test_end_to_end.py  test_full_load_optimization.py  test_full_pipeline.py  test_lifecycle.py  test_parser.py  test_pipeline_integration.py  test_retractions.py  test_s3_acquisition.py
tests/test_data/: PMC001.xml  PMC001_updated.xml  PMC002.xml  PMC003.xml  PMC004_different_prefix.xml  baseline_article.xml  delta.filelist.csv  malformed_article.xml  special_chars_article.xml
